--- a/library_main/templates/index.html
+++ b/library_main/templates/index.html
@@ -3,6 +3,37 @@
 {% block meta %}
 <meta content="" name="description">
 <meta content="" name="keywords">
-    {% endblock %}
-{% block body %}{% endblock %}
+{% endblock %}
+{% block body %}
+<section id="hero-slider" class="hero-slider">
+    <div class="container-md" data-aos="fade-in">
+        <div class="row">
+            <div class="col-12">
+                <div class="swiper sliderFeaturedPosts">
+                    <div class="swiper-wrapper">
+                        {% for news in news %}
+                        <div class="swiper-slide">
+                            <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url({{ MEDIA_URL }}{{ news.image.url }});">
+                                <div class="img-bg-inner">
+                                    <h2>{{ news.heading }}</h2>
+                                    <p>{{ news.description }}</p>
+                                </div>
+                            </a>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <div class="custom-swiper-button-next">
+                        <span class="bi-chevron-right"></span>
+                    </div>
+                    <div class="custom-swiper-button-prev">
+                        <span class="bi-chevron-left"></span>
+                    </div>
+
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+{% endblock %}
 
