--- a/library_main/templates/base.html
+++ b/library_main/templates/base.html
@@ -11,6 +11,14 @@
     <meta content="" name="keywords">
     {% endblock %}
 
+    <style>
+        .truncate {
+            white-space: nowrap; /* Текст не переносится */
+            overflow: hidden; /* Обрезаем всё за пределами блока */
+            text-overflow: ellipsis; /* Добавляем многоточие */
+        }
+    </style>
+
     <!-- Favicons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
@@ -42,12 +50,11 @@
     ======================================================== -->
 </head>
 <body>
-    {% block body %}{% endblock %}
     <!-- ======= Header ======= -->
     <header id="header" class="header d-flex align-items-center fixed-top">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-            <a href="index.html" class="logo d-flex align-items-center">
+            <a href="{% url 'index' %}" class="logo d-flex align-items-center">
                 <!-- Uncomment the line below if you also wish to use an image logo -->
                 <!-- <img src="assets/img/logo.png" alt=""> -->
                 <h1>BookStoreOnline</h1>
@@ -59,18 +66,18 @@
                     <li class="dropdown">
                         <a href="category.html"><span>Категории</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                         <ul>
-                        {% for cat in category %}
+                            {% for cat in category %}
                             <li class="dropdown">
                                 <a href="#"><span>{{ cat.name }}</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                                 <ul>
-                                {% for gen in genre %}
-                                {% if cat == gen.category %}
+                                    {% for gen in genre %}
+                                    {% if cat == gen.category %}
                                     <li><a href="#">{{ gen.name }}</a></li>
-                                {% endif %}
-                                {% endfor %}
+                                    {% endif %}
+                                    {% endfor %}
                                 </ul>
                             </li>
-                        {% endfor %}
+                            {% endfor %}
                         </ul>
                     </li>
 
@@ -101,90 +108,84 @@
         </div>
 
     </header><!-- End Header -->
-
-
-
+    <main id="main">
+        {% block body %}{% endblock %}
+    </main>
     <footer id="footer" class="footer">
-
         <div class="footer-content">
             <div class="container">
-
                 <div class="row g-5">
                     <div class="col-lg-4">
                         <h3 class="footer-heading">BookStoreOnline</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ab, perspiciatis beatae autem deleniti voluptate nulla a dolores, exercitationem eveniet libero laudantium recusandae officiis qui aliquid blanditiis omnis quae. Explicabo?</p>
                         <p><a href="about.html" class="footer-link-more">Learn More</a></p>
                     </div>
-                    <div class="col-6 col-lg-2">
-                        <h3 class="footer-heading">Навигация</h3>
-                        <ul class="footer-links list-unstyled">
-                            <li><a href="{% url 'index' %}"><i class="bi bi-chevron-right"></i> Главная</a></li>
-                            <li><a href="about.html"><i class="bi bi-chevron-right"></i> О нас</a></li>
-                            <li><a href="contact.html"><i class="bi bi-chevron-right"></i> Контакты</a></li>
-                        </ul>
-                    </div>
-                    
-
+                        <div class="col-6 col-lg-2">
+                            <h3 class="footer-heading">Навигация</h3>
+                            <ul class="footer-links list-unstyled">
+                                <li><a href="{% url 'index' %}"><i class="bi bi-chevron-right"></i> Главная</a></li>
+                                <li><a href="about.html"><i class="bi bi-chevron-right"></i> О нас</a></li>
+                                <li><a href="contact.html"><i class="bi bi-chevron-right"></i> Контакты</a></li>
+                            </ul>
+                        </div>
                     <div class="col-lg-4">
-                        <h3 class="footer-heading">Новости</h3>
+                            <h3 class="footer-heading">Новости</h3>
 
-                        <ul class="footer-links footer-blog-entry list-unstyled">
-                            {% for news in news %}
-                            <li>
-                                <a href="single-post.html" class="d-flex align-items-center">
-                                    <img src="assets/img/post-sq-1.jpg" alt="" class="img-fluid me-3">
-                                    <div>
-                                        <div class="post-meta d-block"><span class="date">{{ news.pudlicachia_date }}</span> <span class="mx-1">&bullet;</span> <span>{{ news.source }}</span></div>
-                                        <span>{{ news.heading }}</span>
-                                    </div>
-                                </a>
-                            </li>
-                            {% endfor %}
-                        </ul>
+                            <ul class="footer-links footer-blog-entry list-unstyled">
+                                {% for news in news %}
+                                <li>
+                                    <a href="single-post.html" class="d-flex align-items-center">
+                                        <img src="assets/img/post-sq-1.jpg" alt="" class="img-fluid me-3">
+                                        <div>
+                                            <div class="post-meta d-block"><span class="date">{{ news.pudlicachia_date }}</span> <span class="mx-1">&bullet;</span> <span>{{ news.source }}</span></div>
+                                            <span>{{ news.heading }}</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                {% endfor %}
+                            </ul>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="footer-legal">
-            <div class="container">
+            <div class="footer-legal">
+                <div class="container">
 
-                <div class="row justify-content-between">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        <div class="copyright">
-                            © Все права защищены <strong><span>BookStoreOnline</span></strong>.
+                    <div class="row justify-content-between">
+                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                            <div class="copyright">
+                                © Все права защищены <strong><span>BookStoreOnline</span></strong>.
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-6">
-                        <div class="social-links mb-3 mb-lg-0 text-center text-md-end">
-                            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                            <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-                            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                        <div class="col-md-6">
+                            <div class="social-links mb-3 mb-lg-0 text-center text-md-end">
+                                <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+                                <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+                                <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+                                <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
+                                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                            </div>
+
                         </div>
 
                     </div>
 
                 </div>
-
             </div>
         </div>
-
     </footer>
 
-    <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+        <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-    <!-- Vendor JS Files -->
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'vendor/swiper/swiper-bundle.min.js' %}"></script>
-    <script src="{% static 'vendor/glightbox/js/glightbox.min.js' %}"></script>
-    <script src="{% static 'vendor/aos/aos.js' %}"></script>
-    <script src="{% static 'vendor/php-email-form/validate.js' %}"></script>
+        <!-- Vendor JS Files -->
+        <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+        <script src="{% static 'vendor/swiper/swiper-bundle.min.js' %}"></script>
+        <script src="{% static 'vendor/glightbox/js/glightbox.min.js' %}"></script>
+        <script src="{% static 'vendor/aos/aos.js' %}"></script>
+        <script src="{% static 'vendor/php-email-form/validate.js' %}"></script>
 
-    <!-- Template Main JS File -->
-    <script src="{% static 'js/main.js' %}"></script>
+        <!-- Template Main JS File -->
+        <script src="{% static 'js/main.js' %}"></script>
 
 </body>
 </html>
