--- a/library_main/templates/index.html
+++ b/library_main/templates/index.html
@@ -16,7 +16,7 @@
                             <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url({{ MEDIA_URL }}{{ news.image.url }});">
                                 <div class="img-bg-inner">
                                     <h2>{{ news.heading }}</h2>
-                                    <p>{{ news.description }}</p>
+                                    <p class="truncate">{{ news.description }}</p>
                                 </div>
                             </a>
                         </div>
@@ -31,6 +31,144 @@
 
                     <div class="swiper-pagination"></div>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="category-section">
+    <div class="container" data-aos="fade-up">
+
+        <div class="section-header d-flex justify-content-between align-items-center mb-5">
+            <h2>Новинки</h2>
+            <div><a href="category.html" class="more">Все новинки</a></div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-9">
+
+                <div class="d-lg-flex post-entry-2">
+                    <a href="single-post.html" class="me-4 thumbnail mb-4 mb-lg-0 d-inline-block">
+                        <img src="{{ MEDIA_URL }}{{ now.0.image.url }}" alt="" class="img-fluid">
+                    </a>
+                    <div>
+                        <div class="post-meta"><span class="date">Дата написания</span> <span class="mx-1">&bullet;</span> <span>{{ now.0.date_of_writing }}</span></div>
+                        <h3><a href="single-post.html">{{ now.0.name }}</a></h3>
+                        <p>{{ now.0.description }}</p>
+                        <div class="d-flex align-items-center author">
+                            <div class="photo"><img src="{{ MEDIA_URL }}{{ now.0.author.image.url }}" alt="" class="img-fluid"></div>
+                            <div class="name">
+                                <h3 class="m-0 p-0">{{ now.0.author }}</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="post-entry-1 border-bottom">
+                            <a href="single-post.html"><img src="{{ MEDIA_URL }}{{ now.1.image.url }}" alt="" class="img-fluid"></a>
+                            <div class="post-meta"><span class="date">Дата написания</span> <span class="mx-1">&bullet;</span> <span>{{ now.1.date_of_writing }}</span></div>
+                            <h2 class="mb-2"><a href="single-post.html">{{ now.1.name }}</a></h2>
+                            <div class="d-flex align-items-center author">
+                                <div class="photo"><img src="{{ MEDIA_URL }}{{ now.1.author.image.url }}" alt="" class="img-fluid"></div>
+                                <div class="name">
+                                    <h3 class="m-0 p-0">{{ now.1.author }}</h3>
+                                </div>
+                            </div>
+                            <p></p>
+                            <p class="mb-4 d-block">{{ now.1.description }}</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="post-entry-1">
+                            <a href="single-post.html"><img src="{{ MEDIA_URL }}{{ now.2.image.url }}" alt="" class="img-fluid"></a>
+                            <div class="post-meta"><span class="date">Дата написания</span> <span class="mx-1">&bullet;</span> <span>{{ now.2.date_of_writing }}</span></div>
+                            <h2 class="mb-2"><a href="single-post.html">{{ now.2.name }}</a></h2>
+                            <div class="d-flex align-items-center author">
+                                <div class="photo"><img src="{{ MEDIA_URL }}{{ now.1.author.image.url }}" alt="" class="img-fluid"></div>
+                                <div class="name">
+                                    <h3 class="m-0 p-0">{{ now.1.author }}</h3>
+                                </div>
+                            </div>
+                            <p></p>
+                            <p class="mb-4 d-block">{{ now.1.description }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                {% for news in news %}
+                    <div class="post-entry-1 border-bottom">
+                        <div class="post-meta"><span class="date">Дата</span> <span class="mx-1">&bullet;</span> <span>{{ news.pudlicachia_date }}</span></div>
+                        <h2 class="mb-2"><a href="single-post.html">{{ news.heading }}</a></h2>
+                        <span class="author mb-3 d-block">{{ news.source }}</span>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+</section>
+<section class="category-section">
+    <div class="container" data-aos="fade-up">
+
+        <div class="section-header d-flex justify-content-between align-items-center mb-5">
+            <h2>Рандомное чтение</h2>
+        </div>
+
+        <div class="row">
+            <div class="col-md-9 order-md-2">
+
+                <div class="d-lg-flex post-entry-2">
+                    <a href="single-post.html" class="me-4 thumbnail d-inline-block mb-4 mb-lg-0">
+                        <img src="assets/img/post-landscape-3.jpg" alt="" class="img-fluid">
+                    </a>
+                    <div>
+                        <div class="post-meta"><span class="date">Business</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
+                        <h3><a href="single-post.html">What is the son of Football Coach John Gruden, Deuce Gruden doing Now?</a></h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas, nobis error deserunt aliquam temporibus sapiente, laudantium dolorum itaque libero eos deleniti?</p>
+                        <div class="d-flex align-items-center author">
+                            <div class="photo"><img src="assets/img/person-4.jpg" alt="" class="img-fluid"></div>
+                            <div class="name">
+                                <h3 class="m-0 p-0">Wade Warren</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="post-entry-1 border-bottom">
+                            <a href="single-post.html"><img src="assets/img/post-landscape-5.jpg" alt="" class="img-fluid"></a>
+                            <div class="post-meta"><span class="date">Business</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
+                            <h2 class="mb-2"><a href="single-post.html">11 Work From Home Part-Time Jobs You Can Do Now</a></h2>
+                            <span class="author mb-3 d-block">Jenny Wilson</span>
+                            <p class="mb-4 d-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero temporibus repudiandae, inventore pariatur numquam cumque possimus</p>
+                        </div>
+
+                        <div class="post-entry-1">
+                            <div class="post-meta"><span class="date">Business</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
+                            <h2 class="mb-2"><a href="single-post.html">5 Great Startup Tips for Female Founders</a></h2>
+                            <span class="author mb-3 d-block">Jenny Wilson</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="post-entry-1">
+                            <a href="single-post.html"><img src="assets/img/post-landscape-7.jpg" alt="" class="img-fluid"></a>
+                            <div class="post-meta"><span class="date">Business</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
+                            <h2 class="mb-2"><a href="single-post.html">How to Avoid Distraction and Stay Focused During Video Calls?</a></h2>
+                            <span class="author mb-3 d-block">Jenny Wilson</span>
+                            <p class="mb-4 d-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero temporibus repudiandae, inventore pariatur numquam cumque possimus</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                {% for news in news %}
+                <div class="post-entry-1 border-bottom">
+                    <div class="post-meta"><span class="date">Дата</span> <span class="mx-1">&bullet;</span> <span>{{ news.pudlicachia_date }}</span></div>
+                    <h2 class="mb-2"><a href="single-post.html">{{ news.heading }}</a></h2>
+                    <span class="author mb-3 d-block">{{ news.source }}</span>
+                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
