доделана главная страница

--- a/library_main/templates/index.html
+++ b/library_main/templates/index.html
@@ -119,16 +119,16 @@
 
                 <div class="d-lg-flex post-entry-2">
                     <a href="single-post.html" class="me-4 thumbnail d-inline-block mb-4 mb-lg-0">
-                        <img src="assets/img/post-landscape-3.jpg" alt="" class="img-fluid">
+                        <img src="{{ MEDIA_URL }}{{ book.0.image.url }}" alt="" class="img-fluid">
                     </a>
                     <div>
-                        <div class="post-meta"><span class="date">Business</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
-                        <h3><a href="single-post.html">What is the son of Football Coach John Gruden, Deuce Gruden doing Now?</a></h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas, nobis error deserunt aliquam temporibus sapiente, laudantium dolorum itaque libero eos deleniti?</p>
+                        <div class="post-meta"><span class="date">Дата написания</span> <span class="mx-1">&bullet;</span> <span>{{ book.0.date_of_writing }}</span></div>
+                        <h3><a href="single-post.html">{{ book.0.name }}</a></h3>
+                        <p>{{ book.0.description }}</p>
                         <div class="d-flex align-items-center author">
-                            <div class="photo"><img src="assets/img/person-4.jpg" alt="" class="img-fluid"></div>
+                            <div class="photo"><img src="{{ MEDIA_URL }}{{ book.0.author.image.url }}" alt="" class="img-fluid"></div>
                             <div class="name">
-                                <h3 class="m-0 p-0">Wade Warren</h3>
+                                <h3 class="m-0 p-0">{{ book.0.author }}</h3>
                             </div>
                         </div>
                     </div>
@@ -137,26 +137,30 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="post-entry-1 border-bottom">
-                            <a href="single-post.html"><img src="assets/img/post-landscape-5.jpg" alt="" class="img-fluid"></a>
-                            <div class="post-meta"><span class="date">Business</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
-                            <h2 class="mb-2"><a href="single-post.html">11 Work From Home Part-Time Jobs You Can Do Now</a></h2>
-                            <span class="author mb-3 d-block">Jenny Wilson</span>
-                            <p class="mb-4 d-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero temporibus repudiandae, inventore pariatur numquam cumque possimus</p>
-                        </div>
-
-                        <div class="post-entry-1">
-                            <div class="post-meta"><span class="date">Business</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
-                            <h2 class="mb-2"><a href="single-post.html">5 Great Startup Tips for Female Founders</a></h2>
-                            <span class="author mb-3 d-block">Jenny Wilson</span>
+                            <a href="single-post.html"><img src="{{ MEDIA_URL }}{{ book.1.image.url }}" alt="" class="img-fluid"></a>
+                            <div class="post-meta"><span class="date">Дата написания</span> <span class="mx-1">&bullet;</span> <span>{{ book.1.date_of_writing }}</span></div>
+                            <h2 class="mb-2"><a href="single-post.html">{{ book.1.name }}</a></h2>
+                            <div class="d-flex align-items-center author">
+                                <div class="photo"><img src="{{ MEDIA_URL }}{{ book.1.author.image.url }}" alt="" class="img-fluid"></div>
+                                <div class="name">
+                                    <h3 class="m-0 p-0">{{ book.1.author }}</h3>
+                                </div>
+                            </div>
+                            <p class="mb-4 d-block">{{ book.1.description }}</p>
                         </div>
                     </div>
                     <div class="col-lg-8">
                         <div class="post-entry-1">
-                            <a href="single-post.html"><img src="assets/img/post-landscape-7.jpg" alt="" class="img-fluid"></a>
-                            <div class="post-meta"><span class="date">Business</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
-                            <h2 class="mb-2"><a href="single-post.html">How to Avoid Distraction and Stay Focused During Video Calls?</a></h2>
-                            <span class="author mb-3 d-block">Jenny Wilson</span>
-                            <p class="mb-4 d-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero temporibus repudiandae, inventore pariatur numquam cumque possimus</p>
+                            <a href="single-post.html"><img src="{{ MEDIA_URL }}{{ book.2.image.url }}" alt="" class="img-fluid"></a>
+                            <div class="post-meta"><span class="date">Дата написания</span> <span class="mx-1">&bullet;</span> <span>{{ book.2.date_of_writing }}</span></div>
+                            <h2 class="mb-2"><a href="single-post.html">{{ book.2.name }}</a></h2>
+                            <div class="d-flex align-items-center author">
+                                <div class="photo"><img src="{{ MEDIA_URL }}{{ book.2.author.image.url }}" alt="" class="img-fluid"></div>
+                                <div class="name">
+                                    <h3 class="m-0 p-0">{{ book.2.author }}</h3>
+                                </div>
+                            </div>
+                            <p class="mb-4 d-block">{{ book.2.description }}</p>
                         </div>
                     </div>
                 </div>
