реализована страница жанров

--- a/library_main/templates/base.html
+++ b/library_main/templates/base.html
@@ -72,7 +72,7 @@
                                 <ul>
                                     {% for gen in genre %}
                                     {% if cat == gen.category %}
-                                    <li><a href="#">{{ gen.name }}</a></li>
+                                    <li><a href="{{ gen.get_absolute_url }}">{{ gen.name }}</a></li>
                                     {% endif %}
                                     {% endfor %}
                                 </ul>
@@ -96,7 +96,7 @@
 
                 <!-- ======= Search Form ======= -->
                 <div class="search-form-wrap js-search-form-wrap">
-                    <form action="search-result.html" class="search-form">
+                    <form action="#" class="search-form">
                         <span class="icon bi-search"></span>
                         <input type="text" placeholder="Поиск" class="form-control">
                         <button class="btn js-search-close"><span class="bi-x"></span></button>
