--- a/library_main/templates/base.html
+++ b/library_main/templates/base.html
@@ -64,7 +64,7 @@
                 <ul>
                     <li><a href="{% url 'index' %}">Главная</a></li>
                     <li class="dropdown">
-                        <a href="category.html"><span>Категории</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                        <a href="#"><span>Категории</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                         <ul>
                             {% for cat in category %}
                             <li class="dropdown">
@@ -81,16 +81,12 @@
                         </ul>
                     </li>
 
-                    <li><a href="about.html">О нас</a></li>
-                    <li><a href="contact.html">Контакты</a></li>
+                    <li><a href="about.html">Авторы</a></li>
+                    <li><a href="{% url 'contact' %}">Контакты</a></li>
                 </ul>
             </nav><!-- .navbar -->
 
             <div class="position-relative">
-                <a href="#" class="mx-2"><span class="bi-facebook"></span></a>
-                <a href="#" class="mx-2"><span class="bi-twitter"></span></a>
-                <a href="#" class="mx-2"><span class="bi-instagram"></span></a>
-
                 <a href="#" class="mx-2 js-search-open"><span class="bi-search"></span></a>
                 <i class="bi bi-list mobile-nav-toggle"></i>
 
@@ -123,8 +119,8 @@
                             <h3 class="footer-heading">Навигация</h3>
                             <ul class="footer-links list-unstyled">
                                 <li><a href="{% url 'index' %}"><i class="bi bi-chevron-right"></i> Главная</a></li>
-                                <li><a href="about.html"><i class="bi bi-chevron-right"></i> О нас</a></li>
-                                <li><a href="contact.html"><i class="bi bi-chevron-right"></i> Контакты</a></li>
+                                <li><a href="about.html"><i class="bi bi-chevron-right"></i> Авторы</a></li>
+                                <li><a href="{% url 'contact' %}"><i class="bi bi-chevron-right"></i> Контакты</a></li>
                             </ul>
                         </div>
                     <div class="col-lg-4">
@@ -183,7 +179,7 @@
         <script src="{% static 'vendor/glightbox/js/glightbox.min.js' %}"></script>
         <script src="{% static 'vendor/aos/aos.js' %}"></script>
         <script src="{% static 'vendor/php-email-form/validate.js' %}"></script>
-
+        <script type="text/javascript" charset="utf-8" async="async" src="//www.litres.ru/static/widgets/buy_widget/js/widget.js"></script>
         <!-- Template Main JS File -->
         <script src="{% static 'js/main.js' %}"></script>
 
